<package>
    <name>gr_map_server</name>
    <version>0.0.3</version>
    <description>
      gr_map_server package
    </description>

    <maintainer email="jose.carlos.mayoral.banos@nmbu.no">Jose Mayoral</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>map_server</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>mongodb_store</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>gr_action_msgs</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>tf2</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>geodesy</build_depend>
   
    <run_depend>roscpp</run_depend>
    <run_depend>map_server</run_depend>
    <run_depend>roslib</run_depend>
    <run_depend>mongodb_store</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>gr_action_msgs</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>tf2</run_depend>
    <run_depend>tf2_ros</run_depend>
    <run_depend>geodesy</run_depend>

</package>
